Updated dependency versions and fixed a problem with the discord reporting.